update openapi doc to better specify the search by prefix name
