# manager/src/main/java/com/redhat/service/smartevents/manager/models/Processor.java
@@ -75,12 +75,12 @@ import io.quarkiverse.hibernate.types.json.JsonTypes;
 })
 @Entity
 @FilterDefs({
-        @FilterDef(name = "byName", parameters = { @ParamDef(name = "name", type = "string") }),
+        @FilterDef(name = "byNamePrefix", parameters = { @ParamDef(name = "namePrefix", type = "string") }),
         @FilterDef(name = "byStatus", parameters = { @ParamDef(name = "status", type = "com.redhat.service.smartevents.manager.dao.EnumTypeManagedResourceStatus") }),
         @FilterDef(name = "byType", parameters = { @ParamDef(name = "ptype", type = "com.redhat.service.smartevents.manager.dao.EnumTypeProcessorType") })
 })
 @Filters({
-        @Filter(name = "byName", condition = "name like :name"),
+        @Filter(name = "byNamePrefix", condition = "name like :namePrefix"),
         @Filter(name = "byStatus", condition = "status in (:status)"),
         @Filter(name = "byType", condition = "type in (:ptype)")
 })
